--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,10 @@ body {
 #menu-btn:focus {
     box-shadow: 0 0 0 0.25rem #7952b344;
 }
+
+#resultado { 
+    background-color:lightgreen; 
+    border: black 0.2rem solid; 
+    padding: 1rem;
+    font-weight: bold;
+}
